# Image-Conversion

./: CMakeLists.txt  LICENSE  QtWidgetsApplication2.cpp  QtWidgetsApplication2.h  QtWidgetsApplication2.qrc  QtWidgetsApplication2.ui  README.md  imageprocessor.cpp  imageprocessor.h
